update style on project cards and fix ff image on mobile

--- a/nextjs-portfolio/styles/globals.css
+++ b/nextjs-portfolio/styles/globals.css
@@ -46,3 +46,78 @@ html {
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
+* {
+  box-sizing: border-box;
+}
+
+.card {
+  border-radius: 15px;
+  padding: 1.5rem;
+  background: white;
+  position: relative;
+  display: flex;
+  align-items: flex-end;
+  transition: 0.4s ease-out;
+}
+.card:hover {
+  transform: translateY(-5px);
+}
+.card:hover::before {
+  opacity: 1;
+}
+.card .backImage {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 15px;
+}
+.card::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  border-radius: 15px;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 2;
+  transition: 0.5s;
+  opacity: 0;
+}
+.card .info {
+  position: relative;
+  z-index: 3;
+  color: white;
+  opacity: 0;
+  transform: translateY(30px);
+  transition: 0.5s;
+}
+.card:hover .info {
+  opacity: 1;
+  transform: translateY(0px);
+}
+
+.card .info p {
+  font-size: 15px;
+  margin-top: 6px;
+}
+.card .info p {
+  padding: 0.6rem;
+  outline: none;
+  border: none;
+  border-radius: 7px;
+  background: white;
+  color: black;
+  font-weight: bold;
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+.card .info p:hover {
+  background: #f87171;
+  color: white;
+}
